All code blocks now scroll horizontally

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -89,9 +89,11 @@
     &:has(code) {
       background-color: var(--color-bg-element);
       border-radius: var(--border-radius);
+      box-sizing: border-box;
       color: rgb(150 150 160);
       overflow: auto;
       padding: 8px 16px;
+      width: 100%;
       max-width: fit-content;
 
       .hljs-comment {
