Style property input

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -47,6 +47,7 @@
   body {
     background-color: var(--color-bg);
     color: var(--color-fg);
+    color-scheme: only dark;
     font-family: var(--font-default);
   }
 
@@ -60,6 +61,20 @@
   code {
     font-family: var(--font-code);
     font-size: 0.8em;
+  }
+
+  label {
+    &:has(input[type="text"]) input {
+      background: none;
+      border: none;
+      color: inherit;
+      display: block;
+      font-family: var(--font-code);
+      font-size: 0.8em;
+      margin-top: 0.5ch;
+      padding: 0.5ch 1ch;
+      border-radius: calc(var(--border-radius) / 2);
+    }
   }
 
   table {
@@ -114,6 +129,12 @@
 
   summary {
     user-select: none;
+  }
+
+  .card {
+    background-color: var(--color-bg-1);
+    border-radius: var(--border-radius);
+    padding: 8px 16px;
   }
 
   .material-symbols-outlined {
