Move help button to footer

--- a/src/pages/index/styles.css
+++ b/src/pages/index/styles.css
@@ -9,7 +9,18 @@ body {
 }
 
 footer {
-  text-align: center;
+  display: grid;
+  grid-auto-columns: minmax(0, 1fr);
+
+  :first-child {
+    grid-column: 2;
+    justify-self: center;
+  }
+
+  :last-child {
+    grid-column: 3;
+    justify-self: end;
+  }
 }
 
 h1 {
@@ -53,12 +64,6 @@ main {
   span {
     font-size: 3rem;
   }
-}
-
-#help-button {
-  position: fixed;
-  bottom: 16px;
-  right: 16px;
 }
 
 #help-dialog {
@@ -111,4 +116,8 @@ main {
 
 #help-dialog-close-button {
   float: right;
+}
+
+#made-by {
+  text-align: center;
 }
