--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -51,11 +51,19 @@
     font-family: var(--font-default);
   }
 
-  button {
-    background: none;
+  button,
+  .button {
+    background-color: var(--color-bg-1);
+    border-radius: 8px;
     border: none;
     color: inherit;
     cursor: pointer;
+    display: block;
+    padding: 8px 16px;
+
+    &:hover {
+      opacity: 0.8;
+    }
   }
 
   code {
