Add .button variant for <a>

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -37,10 +37,16 @@
   }
 
   a {
-    color: var(--color-anchor);
+    &.button {
+      text-decoration: none;
+    }
 
-    &:visited {
+    &:not(.button) {
       color: var(--color-anchor);
+
+      &:visited {
+        color: var(--color-anchor);
+      }
     }
   }
 
