--- a/src/pages/index/styles.css
+++ b/src/pages/index/styles.css
@@ -9,17 +9,26 @@ body {
 }
 
 footer {
-  display: grid;
-  grid-auto-columns: minmax(0, 1fr);
-
-  :first-child {
-    grid-column: 2;
-    justify-self: center;
+  @media screen and (max-width: 400px) {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
   }
 
-  :last-child {
-    grid-column: 3;
-    justify-self: end;
+  @media not screen and (max-width: 400px) {
+    align-items: end;
+    display: grid;
+    grid-auto-columns: minmax(0, 1fr);
+    grid-auto-flow: column;
+
+    :first-child {
+      justify-self: start;
+    }
+
+    :last-child {
+      justify-self: end;
+    }
   }
 }
 
