--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -19,6 +19,8 @@
 
     --border-radius: 16px;
 
+    --button-border-radius: 8px;
+
     /* Interpolates font-size from 12px to 16px
      * based on the following steps:
      * 12px at 280px viewport width
@@ -60,7 +62,7 @@
   button,
   .button {
     background-color: var(--color-bg-1);
-    border-radius: 8px;
+    border-radius: var(--button-border-radius);
     border: none;
     color: inherit;
     cursor: pointer;
